--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ html {
   }
   
   /**
-  * This is the "body" of the odin-sketch.
+  * This is the "body" of the sketch.
   */
   
   #container { 
@@ -126,15 +126,15 @@ html {
   
     border-radius: 15px;
   
-    background-color: red;
+    background-color: purple;
   }
   
   #div-screen {
     display: grid;
   
-    border: 5px solid firebrick;
+    border: 5px solid black;
   
-    background-color: lightgray;
+    background-color: rgb(242, 242, 247);
   
     cursor: pointer;
   }
@@ -160,7 +160,7 @@ html {
   
   #h1-title {
     font-family: 'Bungee Inline', cursive;
-    color: goldenrod;
+    color: rgb(0, 0, 0);
   }
   
   .below-screen-buttons {
@@ -186,7 +186,7 @@ html {
   .below-screen-buttons:focus {
     outline: none;
   
-    box-shadow: 0 0 0 3px firebrick;
+    box-shadow: 0 0 0 3px black;
   }
   
   #button-reset:active {
